This is a test of the lazy commit function

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -163,7 +163,9 @@
    "metadata": {},
    "source": [
     "*write you response here*\n",
-    "\n"
+    "* Edmond Balika\n",
+    "* Ignacio Luque\n",
+    "* Antonio Dehesa\n"
    ]
   },
   {
