--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -366,23 +366,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      2 2150:credit_card:xxxx-xxxx-xxxx:charged:$50\r\n",
-      "      3 2350:credit_card:xxxx-xxxx-xxxx:charged:$20\r\n",
-      "      2 3350:credit_card:xxxx-xxxx-xxxx:charged:$71\r\n"
+      "      2 customer:2150:credit_card:xxxx-xxxx-xxxx:charged:$50\r\n",
+      "      3 customer:2350:credit_card:xxxx-xxxx-xxxx:charged:$20\r\n",
+      "      2 customer:3350:credit_card:xxxx-xxxx-xxxx:charged:$71\r\n"
      ]
     }
    ],
    "source": [
     "# Write you commands in the next line\n",
     "#! grep -v \"declined\" payment_gateway.logxx | grep -E 'customer:[0-9]+:credit_card:.*charged:.*' | awk -F ':' '{ count[$2]++; line[$2]=$0 } END { for (customer in count) { if (count[customer] > 1) { print count[customer], line[customer] } } }'\n",
-    "! grep '\\$' payment_gateway.logxx | awk 'BEGIN {FS=OFS=\":\"}{print $2,$3,$4,$5,$6}' | sort | uniq -c -d"
+    "! grep '\\$' payment_gateway.logxx | awk 'BEGIN {FS=OFS=\":\"}{print \"customer\",$2,$3,$4,$5,$6}' | sort | uniq -c -d"
    ]
   }
  ],
